src/test/testcases/errors/p2_public/task_1/compound_err_2.ctx.mavl
function void main(){
    var float x;
    x = 10.0;
    
    {
      val int x = 5;
      var vector<int>[999] x;
    }
}